--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/login.css">
   <link rel="stylesheet" href="./css/nav.css">
-  <title>Login</title>
+  <title>Recuperar Contrseña</title>
 </head>
 <body>
   <header class="header">
@@ -27,13 +27,11 @@
   </header>
   <main class="login-container">
     <div class="login-form">
-      <h2>Login</h2>
+      <h2>Recuperar Contraseña</h2>
       <form action="#" method="post">
         <input type="email" placeholder="Email" required>
-        <input type="password" placeholder="Password" required>
-        <button type="submit">Login</button>
+        <button type="submit">Recuperar</button>
       </form>
-      <a href="forgotPassword.html">Forgot password?</a>
     </div>
   </main>
   <footer>
