--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           Sube imágenes, visualiza materiales utilizados y sigue el progreso de
           tu obra con nuestra plataforma.
         </p>
-        <img src="como-funciona.jpg" alt="Explicación de la plataforma" />
+        <img src="./images/como funciona.avif" alt="Explicación de la plataforma" />
       </section>
 
       <section class="section" id="usuarios">
@@ -42,12 +42,14 @@
               Los clientes pueden seguir el avance de su proyecto en tiempo
               real.
             </p>
+            <img src="./images/client.png" alt="clientes">
           </div>
           <div class="card">
-            <h3>Arquitectos</h3>
+            <h3>companias</h3>
             <p>
-              Los arquitectos pueden subir diseños y coordinar con los clientes.
+              Las companias pueden subir diseños y coordinar con los clientes.
             </p>
+            <img src="./images/arquitecto.jpg" alt="arquitecto">
           </div>
           <div class="card">
             <h3>Contratistas</h3>
@@ -55,6 +57,7 @@
               Los contratistas pueden actualizar el estado de la construcción y
               materiales utilizados.
             </p>
+            <img src="./images/contratistas.jpg" alt="contratistas">
           </div>
         </div>
       </section>
@@ -65,6 +68,7 @@
           Si tienes preguntas, contáctanos a través de nuestras redes sociales o
           envíanos un mensaje.
         </p>
+        <button type="button"><a href="./contactUs.html">contactanos</a></button>
       </section>
     </main>
     <footer>
