--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -4,26 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/login.css">
-  <link rel="stylesheet" href="./css/nav.css">
+  <link rel="stylesheet" href="./css/general.css">
+  <script src="./components/navbar/navbar.js"></script>
+  <script src="./components/footer/footer.js"></script>
   <title>Recuperar Contrseña</title>
 </head>
 <body>
-  <header class="header">
-    <nav>
-      <div class="image">
-        <img src="./images/logo.png" alt="logo CWvision">
-      </div>
-      <div class="buttons">
-        <button><a href="home.html">Home</a></button>
-        <button><a href="aboutUs.html">About Us</a></button>
-        <button><a href="contactUs.html">Contact Us</a></button>
-        <button><a href="FAQ.html">FAQ</a></button>
-      </div>
-      <div class="auth">
-        <a href="login.html" class="login">Login</a>
-        <button><a href="register.html">Get started</a></button>
-      </div>
-    </nav>
+  <header>
+    <navigation-bar></navigation-bar>
   </header>
   <main class="login-container">
     <div class="login-form">
