--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
           <input type="password" placeholder="Password" id="password" required />
           <button type="button" onclick="capturar()">Login</button>
         </form>
-        <a href="forgot-password.html">Forgot password?</a>
+        <a href="forgotPassword.html">Forgot password?</a>
       </div>
     </main>
     <footer>
