--- a/FAQ.html
+++ b/FAQ.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/general.css" />
-    <link rel="stylesheet" href="./css/FAQ.css">
+    <link rel="stylesheet" href="./css/FAQ.css" />
     <script src="./components/navbar/navbar.js"></script>
     <script src="./components/footer/footer.js"></script>
     <title>FAQ</title>
@@ -19,37 +19,39 @@
         <div class="faq-item">
           <h2>What is CWvision?</h2>
           <p>
-            CWvision is a platform designed to help clients and workers manage home renovation projects 
-            in real-time. It provides tools for tracking progress, uploading images, and communicating 
-            effectively.
+            CWvision is a platform designed to help clients and workers manage
+            home renovation projects in real-time. It provides tools for
+            tracking progress, uploading images, and communicating effectively.
           </p>
         </div>
         <div class="faq-item">
           <h2>How do I register?</h2>
           <p>
-            You can register by clicking on the "Get started" button on the homepage or navigation bar. 
-            Fill out the registration form with your details and select your role (client, worker, or admin).
+            You can register by clicking on the "Get started" button on the
+            homepage or navigation bar. Fill out the registration form with your
+            details and select your role (client, worker, or admin).
           </p>
         </div>
         <div class="faq-item">
           <h2>Can I track the progress of my project?</h2>
           <p>
-            Yes, clients can track the progress of their projects in real-time through the dashboard. 
-            Workers can update the status and upload images to keep clients informed.
+            Yes, clients can track the progress of their projects in real-time
+            through the dashboard. Workers can update the status and upload
+            images to keep clients informed.
           </p>
         </div>
         <div class="faq-item">
           <h2>Is there a mobile app?</h2>
           <p>
-            Currently, CWvision is only available as a web platform. A mobile app may be developed in 
-            future updates.
+            Currently, CWvision is only available as a web platform. A mobile
+            app may be developed in future updates.
           </p>
         </div>
         <div class="faq-item">
           <h2>How do I contact support?</h2>
           <p>
-            You can reach out to our support team through the "Contact Us" page. We are available to 
-            assist you with any questions or issues.
+            You can reach out to our support team through the "Contact Us" page.
+            We are available to assist you with any questions or issues.
           </p>
         </div>
       </div>
