--- a/register.html
+++ b/register.html
@@ -19,15 +19,23 @@
         <h2>Register</h2>
         <form action="#" method="post">
           <input type="text" placeholder="Full Name" id="name" required>
+          <input type="cedula" placeholder="cedula" id="cc" required>
           <input type="email" placeholder="Email" id="email" required>
           <input type="password" placeholder="Password" id="password" required>
           <input type="password" placeholder="Confirm Password" id="verifyPassword" required>
-          <select name="role" id="role" required>
+          <select name="role" id="role" required onchange="showRoleSpecificFields()">
             <option value="" disabled selected>Select your role</option>
-            <option value="Company">Company</option>
-            <option value="client">client</option>
-            <option value="admin">Admin</option>
+            <option value="client">Client</option>
+            <option value="gestor">Gestor</option>
           </select>
+          <div id="clientFields" style="display: none;">
+            <input type="text" placeholder="Phone" id="clientPhone" required>
+            <input type="text" placeholder="Address" id="clientAddress">
+          </div>
+          <div id="gestorFields" style="display: none;">
+            <input type="text" placeholder="Phone" id="gestorPhone" required>
+            <input type="text" placeholder="Company Name" id="companyName">
+          </div>
           <button type="button" onclick="capturar()">Register</button>
         </form>
         <p>Already have an account? <a href="login.html">Login here</a></p>
